--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,15 +5,44 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#DAE0DE"
     android:orientation="vertical">
+
+    <Button
+        android:id="@+id/buttonNorth"
+        android:layout_width="146dp"
+        android:layout_height="85dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:background="#21A979"
+        android:text="North \n 15 minutes"
+        android:textColor="#000000"
+        app:layout_constraintEnd_toStartOf="@+id/buttonEast"
+        app:layout_constraintTop_toBottomOf="@+id/urgentCareTimesTitle" />
+
+    <TextView
+        android:id="@+id/urgentCareTimesTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="#ADB1B0"
+        android:text="Urgent Care Wait Times"
+        android:textAlignment="center"
+
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@+id/payBillButton"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Shannon Health"
+        android:textStyle="bold"
+        android:textColor="#000000"
         android:textAlignment="center"
-        android:textSize="50dp"
+        android:textSize="40dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -66,31 +95,39 @@
         android:id="@+id/chatBotButton"
         android:layout_width="82dp"
         android:layout_height="82dp"
+        android:layout_marginTop="8dp"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/accountButton"
         app:layout_constraintRight_toRightOf="@+id/accountButton"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSouth"
+        app:layout_constraintVertical_bias="0.875"
         app:srcCompat="@drawable/chatbotbutton" />
 
     <ImageView
         android:id="@+id/alertImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintLeft_toLeftOf="@+id/upcomingEventsTitle"
         app:layout_constraintTop_toBottomOf="@+id/title"
-        app:srcCompat="@drawable/alertimage"
-        app:layout_constraintLeft_toLeftOf="@+id/upcomingEventsTitle"/>
+        app:srcCompat="@drawable/alertimage" />
 
     <Button
         android:id="@+id/payBillButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="#21A979"
         android:text="Pay Bill"
-        app:layout_constraintTop_toBottomOf="@+id/upcomingEvents" />
+        app:layout_constraintTop_toBottomOf="@+id/upcomingEvents"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/upcomingEventsTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Upcoming Events"
+        android:background="#ADB1B0"
         android:textAlignment="center"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -99,6 +136,41 @@
         android:id="@+id/upcomingEvents"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        app:layout_constraintTop_toBottomOf="@+id/upcomingEventsTitle" />
+        android:layout_marginTop="12dp"
+        app:layout_constraintTop_toBottomOf="@+id/upcomingEventsTitle"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/buttonEast"
+        android:layout_width="146dp"
+        android:layout_height="85dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="44dp"
+        android:background="#21A979"
+        android:text="East \n 4 minutes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/urgentCareTimesTitle" />
+
+    <Button
+        android:id="@+id/buttonJackson"
+        android:layout_width="146dp"
+        android:layout_height="85dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="20dp"
+        android:background="#21A979"
+        android:text="Jackson \n 9 minutes"
+        app:layout_constraintEnd_toStartOf="@+id/buttonSouth"
+        app:layout_constraintTop_toBottomOf="@+id/buttonNorth" />
+
+    <Button
+        android:id="@+id/buttonSouth"
+        android:layout_width="146dp"
+        android:layout_height="85dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="44dp"
+        android:background="#21A979"
+        android:text="South \n 11 minutes"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonNorth" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
