--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#DAE0DE"
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
@@ -27,6 +28,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="32dp"
+        android:background="#21A979"
         android:text="Urgent Care Near Me"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -72,6 +74,8 @@
         android:layout_marginBottom="8dp"
         android:textSize="20dp"
         android:text="Login"
+        android:textStyle="bold"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/loginEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +91,8 @@
         android:layout_marginBottom="8dp"
         android:textSize="10dp"
         android:text="Email"
+        android:textStyle="bold"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/loginEmail"
         app:layout_constraintEnd_toStartOf="@+id/loginEmail"
         app:layout_constraintHorizontal_bias="0.916"
@@ -103,6 +109,8 @@
         android:layout_marginEnd="8dp"
         android:textSize="10dp"
         android:text="Password"
+        android:textStyle="bold"
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="@+id/loginPassword"
         app:layout_constraintEnd_toStartOf="@+id/loginPassword"
         app:layout_constraintHorizontal_bias="0.916"
@@ -119,6 +127,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Login"
+        android:background="#21A979"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -134,6 +143,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:background="#21A979"
         android:text="Create Account"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
         app:layout_constraintEnd_toStartOf="@+id/forgotPassword"
@@ -147,6 +157,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
+        android:background="#21A979"
         android:layout_marginBottom="8dp"
         android:text="Forgot Password"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
