--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -13,8 +13,8 @@
         android:layout_width="146dp"
         android:layout_height="85dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:background="#21A979"
+        android:layout_marginEnd="28dp"
+        android:background="#00746B"
         android:text="North \n 15 minutes"
         android:textColor="#000000"
         app:layout_constraintEnd_toStartOf="@+id/buttonEast"
@@ -31,24 +31,20 @@
 
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@+id/payBillButton"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="-16dp" />
 
-    <TextView
+    <ImageView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Shannon Health"
-        android:textStyle="bold"
-        android:textColor="#000000"
-        android:textAlignment="center"
-        android:textSize="40dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@id/guideline21"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logo" />
 
     <ImageButton
         android:id="@+id/accountButton"
@@ -91,23 +87,11 @@
         app:layout_constraintLeft_toRightOf="@+id/mapButton"
         app:srcCompat="@drawable/prescriptionbutton" />
 
-    <ImageButton
-        android:id="@+id/chatBotButton"
-        android:layout_width="82dp"
-        android:layout_height="82dp"
-        android:layout_marginTop="8dp"
-        android:scaleType="fitCenter"
-        app:layout_constraintBottom_toTopOf="@+id/accountButton"
-        app:layout_constraintRight_toRightOf="@+id/accountButton"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSouth"
-        app:layout_constraintVertical_bias="0.875"
-        app:srcCompat="@drawable/chatbotbutton" />
-
     <ImageView
         android:id="@+id/alertImage"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintLeft_toLeftOf="@+id/upcomingEventsTitle"
         app:layout_constraintTop_toBottomOf="@+id/title"
         app:srcCompat="@drawable/alertimage" />
@@ -116,37 +100,38 @@
         android:id="@+id/payBillButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:background="#21A979"
+        android:background="#00746B"
         android:text="Pay Bill"
         app:layout_constraintTop_toBottomOf="@+id/upcomingEvents"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="-16dp" />
 
     <TextView
         android:id="@+id/upcomingEventsTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Upcoming Events"
+        android:layout_marginTop="32dp"
         android:background="#ADB1B0"
+        android:text="Upcoming Events"
         android:textAlignment="center"
         android:textSize="18sp"
-        app:layout_constraintTop_toBottomOf="@+id/title" />
+        app:layout_constraintTop_toBottomOf="@+id/title"
+        tools:layout_editor_absoluteX="-16dp" />
 
     <TextView
         android:id="@+id/upcomingEvents"
         android:layout_width="match_parent"
         android:layout_height="80dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toBottomOf="@+id/upcomingEventsTitle"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="-16dp" />
 
     <Button
         android:id="@+id/buttonEast"
         android:layout_width="146dp"
         android:layout_height="85dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="44dp"
-        android:background="#21A979"
+        android:layout_marginEnd="52dp"
+        android:background="#00746B"
         android:text="East \n 4 minutes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/urgentCareTimesTitle" />
@@ -155,9 +140,9 @@
         android:id="@+id/buttonJackson"
         android:layout_width="146dp"
         android:layout_height="85dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="20dp"
-        android:background="#21A979"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="28dp"
+        android:background="#00746B"
         android:text="Jackson \n 9 minutes"
         app:layout_constraintEnd_toStartOf="@+id/buttonSouth"
         app:layout_constraintTop_toBottomOf="@+id/buttonNorth" />
@@ -166,11 +151,18 @@
         android:id="@+id/buttonSouth"
         android:layout_width="146dp"
         android:layout_height="85dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="44dp"
-        android:background="#21A979"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="52dp"
+        android:background="#00746B"
         android:text="South \n 11 minutes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonNorth" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="40dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
