--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,18 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
-    <TextView
+    <ImageView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Shannon Health"
-        android:textSize="50dp"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.125" />
+        app:layout_constraintTop_toBottomOf="@id/guideline24"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/logo" />
 
     <Button
         android:id="@+id/mapsbutton"
@@ -85,8 +85,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:textSize="10dp"
-        android:text="Email"
+        android:textSize="14dp"
+        android:text="Email:"
         app:layout_constraintBottom_toBottomOf="@+id/loginEmail"
         app:layout_constraintEnd_toStartOf="@+id/loginEmail"
         app:layout_constraintHorizontal_bias="0.916"
@@ -101,8 +101,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:textSize="10dp"
-        android:text="Password"
+        android:textSize="14dp"
+        android:text="Password:"
         app:layout_constraintBottom_toBottomOf="@+id/loginPassword"
         app:layout_constraintEnd_toStartOf="@+id/loginPassword"
         app:layout_constraintHorizontal_bias="0.916"
@@ -166,5 +166,12 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="474dp" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_begin="87dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
