--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -132,7 +132,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="52dp"
         android:background="#00746B"
-        android:text="East \n 4 minutes"
+        android:text="West \n 4 minutes"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/urgentCareTimesTitle" />
 
