--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -195,20 +195,37 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="99dp" />
+        app:layout_constraintGuide_end="632dp" />
 
     <Button
         android:id="@+id/buttonCHP"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="392dp"
+        android:layout_marginRight="12dp"
         android:text="Change Password"
         app:layout_constraintRight_toLeftOf="@id/guideline9"
+        app:layout_constraintTop_toBottomOf="@id/guideline10" />
+
+    <Button
+        android:id="@+id/MyChartLink"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="440dp"
+        android:layout_marginEnd="8dp"
+        android:text="MyChart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/guideline9"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/guideline10" />
 
     <Button
         android:id="@+id/buttonLogout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="392dp"
         android:text="Log Out"
         app:layout_constraintLeft_toRightOf="@id/guideline9"
         app:layout_constraintTop_toBottomOf="@id/guideline10" />
